--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta charset="utf-8">
+<title>The Funeral Program Site Memorial Program Paper</title>
+<meta name="description" content="funeral program is a special keepsake that families create for a funeral or memorial service." />
+<meta name="keywords" content="funeral program,funeral programs,funeral program templates,Funeral Paper,funeral program paper,funeral paper,paper for funeral program,funeral bulletin paper,funeral brochure paper,funeral flyer paper,funeral service paper,memorial program paper,obituary program paper,Funeral program site,The funeral site,Funeral site,The funeral program site,Diy templates for funeral,Diy templates for memorial,Diy template for obituary,Diy template for in memory,Diy template for celebration of life,Diy template for funeral service,Funeral Program Site,In loving memory program template,Memorial program template,Memorial program templates,Obituary template,Obituary program templates,Obituary program template,Online funeral program template,Funeral program template online,Funeral program template diy,Obituary templates,Funeral folder template,Funeral folder templates,Memorial folder template,Memorial folder templates,Template for funeral program,Templates for funeral program,Template for funeral programs,Template for obituary,Celebration of life program template,Celebration of life template,Celebration of life templates,Funeral bulletin template,Funeral bulletin templates,Funeral template,Funeral templates,Funeral pamphlet template,Funeral pamphlet templates,Template for funeral pamphlet,Templates for funeral pamphlet,Template for funeral pamphlets,Templates for funeral pamphlets,Template for funeral booklet,Template for funeral booklets,Funeral booklet template,Funeral booklet templates,Custom funeral program template,Custom funeral program templates,Custom funeral template,Funeral brochure template,Funeral brochure templates,Template for funeral brochure,Templates for funeral brochure,Template for funeral brochures,In memory program template,In memory program templates,In memory template,In memory templates,Funeral flyer template,Funeral programme template,Funeral programme templates,Funeral flyers template,Funeral flyer templates,Funeral flyers templates,Template for funeral flyer,Memorial card template,Memorial cards template,Memorial card templates,Template for memorial card,Template for memorial cards,Graduated funeral program template,Graduated funeral program templates,Template for graduated program,Templates for graduated funeral program,Gatefold funeral program template,Gatefold funeral program templates,Template for gatefold program,Template for gatefold funeral programs,Order of service program template,Order of service program templates,Order of service funeral program template,Order of service funeral program templates,The Funeral Program Site,Funeral Program,Funeral Programs,Funeral Template,Funeral Templates,Funeral Pamphlet,Funeral Pamphlets,Funeral Brochures,Funeral Booklets,Funeral Bulletin,Funeral Bulletins,Funeral Booklet,Funeral Flyers,Funeral Flyer,Funeral Paper,Funeral Bookmarks,Sympathy Gifts,Obituary Template,Obituary Templates,Memorial Poems,Funeral Poems,Funeral Songs,Memorial Cards,Funeral Site,The Funeral Site,Diy funeral programs,Funeral flyers,Funeral program paper,funeral program template,funeral program templates,funeral template,funeral templates,funeral program,funeral programs,funeral program examples,the funeral program site,funeral program layout,printed memorials,best poems for funerals,funeral program poem,funeral poems,Custom Program Covers,funeral program template download,funeral bulletins,funeral bulletin,make your own funeral program,make funeral programs,funeral program paper,funeral paper,free funeral program template,funeral program printing,funeral program template word,funeral program site,funeral program design,funeral program acknowledgements,funeral program app,funeral program artwork,funeral program acknowledgement poems,funeral program announcement,funeral program agenda,funeral program and obituary,a funeral program example,a funeral program template,funeral site,the funeral program site free,the funeral program site coupon code,make a funeral program,create a funeral program,funeral program sample,funeral program background,funeral program booklet,funeral program borders,funeral program bible verses,funeral program booklet template,funeral program book,funeral program bulletin,funeral program biography,funeral program cover,funeral program clipart,funeral program card,funeral program cost,funeral program creator,funeral program cover page,Funeral Program Design,funeral program design,funeral program designs,funeral program printing,funeral programs printing,funeral brochure printing,funeral flyers printing,funeral program design print,Funeral program site,The funeral site,Funeral site,The funeral program site,Diy templates for funeral,Diy templates for memorial,Diy template for obituary,Diy template for in memory,Diy template for celebration of life,Diy template for funeral service,Funeral Program Site,In loving memory program template,Memorial program template,Memorial program templates,Obituary template,Obituary program templates,Obituary program template,Online funeral program template,Funeral program template online,Funeral program template diy,Obituary templates,Funeral folder template,Funeral folder templates,Memorial folder template,Memorial folder templates,Template for funeral program,Templates for funeral program,Template for funeral programs,Template for obituary,Celebration of life program template,Celebration of life template,Celebration of life templates,Funeral bulletin template,Funeral bulletin templates,Funeral template,Funeral templates,Funeral pamphlet template,Funeral pamphlet templates,Template for funeral pamphlet,Templates for funeral pamphlet,Template for funeral pamphlets,Templates for funeral pamphlets,Template for funeral booklet,Template for funeral booklets,Funeral booklet template,Funeral booklet templates,Custom funeral program template,Custom funeral program templates,Custom funeral template,Funeral brochure template,Funeral brochure templates,Template for funeral brochure,Templates for funeral brochure" />
+<meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+<link rel="canonical" href="https://thhcdev.github.io/thefuneralprogramsite/">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700" rel='stylesheet' type='text/css'>
+<meta name="viewport" content="initial-scale=1">
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<style type="text/css">
+body {margin:0; padding:0; font-family: 'Open Sans', sans-serif; background: #333; color:#000;}
+#header-wrapper {width:100%; background:transparent; display:block; max-width:1000px; margin:auto;}
+#wrapper {max-width:960px; width:100%; margin: 0px auto; padding:0 20px; background:#fff;}
+#article-wrapper {padding: 0 15px; background:#fff; max-width:640px; display:inline-block; }
+header {max-width:960px; width:100%; margin:auto;}
+header h1 {font-size:44px; color:#fff; text-shadow: #000 2px 2px 5px; margin:0; padding: 30px 0px 30px 0px;}
+.headline {border-bottom: solid 1px #CCC;}
+#nav-wrapper {max-width:1000px; margin:auto; width:100%; background:#336699;}
+nav {padding:10px; display:block; clear:both; font-size:14px; font-weight:700; max-width:920px; width:100%;margin:auto; color:#e6e6e7; overflow:auto;}
+nav ul {list-style-type:none; display:block; overflow:auto; margin:0; padding:0;}
+nav ul li {float:left;}
+nav a {text-decoration:none; padding:0 10px 0 10px; color:#CCC;}
+nav a:hover {color:#fff;}
+aside {font-size:14px; font-weight:700; padding:15px; color:#333; background:transparent;max-width:244px; width:100%; display:inline-block; vertical-align:top; margin-left:10px;}
+aside ul {list-style-type:none; padding-left:15px;}
+aside a {text-decoration:none; color:#333;}
+aside a:hover {color:#000;}
+aside ul li {padding:5px;}
+article {width:100%; display:inline-block;}
+footer {width:100%; display:block;text-align:center; font-size:14px; padding-bottom:40px;}
+footer, footer a {color:#fff;}
+</style>
+<script>insert header block information</script>
+</head>
+<body>
+<div id="header-wrapper">
+<header>
+<h1>The Funeral Program Site Obituary Paper</h1>
+</header>
+</div>
+
+<div id="nav-wrapper">
+<nav>
+<ul>
+</ul>
+</nav>
+</div>
+
+<div id="wrapper">
+
+<div id="article-wrapper">
+<article>
+<div itemscope itemtype="http://schema.org/Article">
+<div id="newlink" class="row"><a href="https://mgyb.co/s/YOtBE" target="_blank">https://mgyb.co/s/YOtBE</a></div><h2 id="item1" itemprop="headline">The Funeral Program Site Funeral Program Template</h2><div class="row"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13354.408437895447!2d-96.6817497!3d33.1983078!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x49602c3e14df05b4!2sThe%20Funeral%20Program%20Site!5e0!3m2!1sen!2sph!4v1674576973274!5m2!1sen!2sph" " width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://www.funeralprogram-site.com/" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://docs.google.com/spreadsheets/d/1XECCnVHfJwWSaAdVt2N_aPTrfeHQrYR9hj4DDJ3Mh_Q/edit" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://mgyb.co/s/VgWnE" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://mgyb.co/s/IudqF" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://mgyb.co/s/YOtBE" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div><div class="row"><iframe src="https://mgyb.co/s/lkIaq" width="100%" height="100%" frameborder="0" scrolling="yes" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div>
+</div>
+</div>
+</article>
+</div>
+
+
+
+</div>
+<footer>
+<p>Copyright &copy; The Funeral Program Site Memorial Program Paper</p>
+</footer>
+</body>
+</html>
